--- a/package.json
+++ b/package.json
@@ -23,11 +23,22 @@
     "eslint": "^8.31.0",
     "next": "^13.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "typescript": "^4.9.4"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "18.11.18",
-    "@types/react": "18.0.26"
+    "@types/react": "18.0.26",
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "@typescript-eslint/parser": "^5.48.0",
+    "eslint": "^8.27.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.5.4"
   }
 }
