--- a/package.json
+++ b/package.json
@@ -29,15 +29,17 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
-    "eslint-config-airbnb-typescript": "^17.0.0",
     "@typescript-eslint/parser": "^5.48.0",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.27.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.5.4"
   }
