--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
   },
   "homepage": "https://github.com/DinarSharipov/next_test#readme",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.1",
     "eslint": "^8.31.0",
     "next": "^13.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@types/node": "18.11.18",
