--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/DinarSharipov/next_test#readme",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
+    "@svgr/webpack": "^6.5.1",
     "eslint": "^8.31.0",
     "next": "^13.1.1",
     "react": "^18.2.0",
