--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "react-use": "^17.4.0"
   },
   "devDependencies": {
     "@types/node": "18.11.18",
