--- a/package.json
+++ b/package.json
@@ -20,15 +20,18 @@
   },
   "homepage": "https://github.com/DinarSharipov/next_test#readme",
   "dependencies": {
+    "@react-pdf-viewer/core": "^3.10.0",
+    "@react-pdf-viewer/default-layout": "^3.10.0",
     "@reduxjs/toolkit": "^1.9.1",
     "@svgr/webpack": "^6.5.1",
     "eslint": "^8.31.0",
     "next": "^13.1.1",
+    "pdfjs-dist": "^3.1.81",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.0",
-    "react-use": "^17.4.0"
+    "react-use": "^17.4.0",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@types/node": "18.11.18",
